# jules-app

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  pyproject.toml  requirements.txt
examples/: usage_examples.py
jules_app/: __init__.py  agent.py  analyzer.py  cli.py  parser.py
tests/: __init__.py  test_jules_app.py
