[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jules-app"
version = "0.1.0"
description = "AI Agent for FIT file analysis using LangChain"
authors = [{name = "Jules App", email = "dev@julesapp.com"}]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "fitparse>=1.2.0",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.2",
    "plotly>=5.15.0",
    "pydantic>=2.5.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]